# data-anchor

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  index.html  justfile  release-plz.toml  rust-toolchain.toml
.cargo/: zepter.yaml
.config/: nextest.toml
.github/: pull_request_template.md
.github/workflows/: build-cli.yml  release-plz.yml  rust.yml
crates/cli/: CHANGELOG.md  Cargo.toml  README.md
crates/cli/src/: benchmark.rs  blob.rs  blober.rs  formatting.rs  indexer.rs  lib.rs  main.rs
crates/client/: CHANGELOG.md  Cargo.toml  README.md
crates/client/src/: blober_client.rs  chunker_client.rs  constants.rs  deploy.rs  hasher_client.rs  helpers.rs  lib.rs  tests.rs  types.rs
crates/client/src/batch_client/: channels.rs  client.rs  messages.rs  mod.rs  transaction.rs
crates/client/src/batch_client/tasks/: block_watcher.rs  transaction_confirmer.rs  transaction_sender.rs
crates/client/src/blober_client/: builder.rs  indexer_client.rs  ledger_client.rs
crates/client/src/client/: builder.rs  indexer_client.rs  ledger_client.rs  mod.rs  proof_client.rs
crates/client/src/fees/: fee.rs  fee_strategy.rs  lamports.rs  microlamports.rs  mod.rs  priority.rs
crates/client/src/tx/: close_blober.rs  close_hasher.rs  complete_chunker.rs  compound.rs  compound_declare.rs  compound_finalize.rs  configure_checkpoint.rs  create_checkpoint.rs  create_chunker.rs  create_hasher.rs  declare_blob.rs  discard_blob.rs  finalize_blob.rs  force_close_chunker.rs  initialize_blober.rs  insert_chunk.rs  mod.rs  set_compute_unit_price.rs
crates/client/tests/: integration.rs
crates/indexer-api/: CHANGELOG.md  Cargo.toml  README.md
crates/indexer-api/src/: indexing.rs  lib.rs  rpc.rs
crates/proofs/: .gitignore  CHANGELOG.md  Cargo.toml  README.md
crates/proofs/.cargo/: mutants.toml
crates/proofs/src/: bank_hash.rs  blob.rs  blober_account_state.rs  compound.rs  debug.rs  lib.rs  slot_hash.rs
crates/proofs/src/accounts_delta_hash/: inclusion.rs  mod.rs
crates/proofs/src/accounts_delta_hash/account_merkle_tree/: builder.rs  hash_tree.rs  mod.rs  solana_accounts_db.rs  tree.rs
crates/proofs/src/accounts_delta_hash/exclusion/: empty.rs  inner.rs  left.rs  mod.rs  proof.rs  right.rs
crates/proofs/src/accounts_delta_hash/testing/: arb_account.rs  arb_keypair.rs  choose_or_generate.rs  generate_accounts.rs  mod.rs  unwrap_or_arbitrary.rs
crates/proofs/src/compound/: completeness.rs  inclusion.rs  mod.rs
crates/proofs/src/testing/: arbitrary_hash.rs  mod.rs
crates/prover/: Cargo.toml  build.rs
crates/prover-script/: Cargo.toml
crates/prover-script/src/: main.rs
crates/prover/programs/core/: Cargo.toml
crates/prover/programs/core/src/: lib.rs
crates/prover/programs/data-correctness/: Cargo.toml
crates/prover/programs/data-correctness/src/: main.rs
crates/prover/programs/dawn-sla/: Cargo.toml
crates/prover/programs/dawn-sla/src/: main.rs
crates/prover/programs/encoding-compression-test/: Cargo.toml
crates/prover/programs/encoding-compression-test/src/: main.rs
crates/prover/programs/pob-sla/: Cargo.toml
crates/prover/programs/pob-sla/src/: main.rs
crates/prover/proof-program/: Cargo.toml
crates/prover/proof-program/src/: main.rs
crates/prover/src/: lib.rs
crates/utils/: CHANGELOG.md  Cargo.toml
crates/utils/src/: compression.rs  encoding.rs  lib.rs
crates/utils/src/compression/: _async.rs  mod.rs
db/: 00-sync_status.sql  01-networks.sql  02-blobers.sql  03-proofs.sql  blobers.sql  blobs.sql  networks.sql  proofs.sql  submissions.sql
examples/: Cargo.toml
examples/cli/: README.md  tmp.json
examples/examples/cli/: cli.sh
examples/examples/client/: README.md
examples/rust-client/: .env  Cargo.toml
examples/rust-client/src/: main.rs
programs/: .pnp.cjs  Anchor.toml  Cargo.toml  README.md  package.json  release-plz.toml
programs/.cargo/: zepter.yaml
programs/programs/blober/: CHANGELOG.md  Cargo.toml  README.md
programs/programs/blober/src/: constants.rs  error.rs  lib.rs  tests.rs
programs/programs/blober/src/instructions/: close.rs  close_blob.rs  configure_checkpoint.rs  create_checkpoint.rs  declare_blob.rs  finalize_blob.rs  initialize.rs  insert_chunk.rs  mod.rs
programs/programs/blober/src/state/: bitmap.rs  blober.rs  checkpoint.rs  mod.rs
programs/programs/blober/src/state/blob/: mod.rs  tests.rs
programs/programs/blober/tests/: integration.rs
programs/programs/data-correctness/: Cargo.toml
programs/programs/data-correctness/src/: lib.rs
programs/programs/dawn-sla/: Cargo.toml
programs/programs/dawn-sla/src/: lib.rs
programs/programs/pob-sla/: Cargo.toml
programs/programs/pob-sla/src/: lib.rs
programs/programs/verifier/: Cargo.toml
programs/programs/verifier/src/: lib.rs
programs/programs/verifiers/data-correctness/: Cargo.toml
programs/programs/verifiers/data-correctness/src/: lib.rs
programs/programs/verifiers/dawn-sla/: Cargo.toml
programs/programs/verifiers/dawn-sla/src/: lib.rs
programs/tests/: blober.ts
scripts/: install-cli.sh
