[workspace]
resolver = "2"
members = [
  "crates/cli",
  "crates/client",
  "crates/indexer",
  "crates/indexer-api",
  "crates/proofs",
  "crates/prover",
  "crates/prover-script",
  "crates/prover/programs/*",
]
exclude = ["programs"]

[workspace.package]
edition = "2024"
version = "0.4.0"
license = "MIT OR Apache-2.0"
authors = ["Nitro Labs <team@nitro.technology>"]
homepage = "https://www.termina.technology"
publish = true
repository = "https://github.com/nitro-svm/data-anchor"

[workspace.dependencies]
# External dependencies
anyhow = "1.0.95"
arbitrary = { version = "1.4.1", features = ["derive"] }
arbtest = "0.3.2"
async-channel = "2.3.1"
async-trait = "0.1.83"
bincode = "1.3.3"
bon = "3.6.4"
bs58 = "0.5.1"
bytesize = "1.3.0"
chrono = "0.4.39"
clap = { version = "4.5.29", features = ["derive", "env"] }
crossbeam = "0.8.4"
csv = "1.3.1"
futures = { version = "0.3.31", default-features = false }
hex = { version = "0.4.3", default-features = false }
itertools = "0.14.0"
jsonrpsee = { version = "0.24.7", features = ["macros", "server-core"] }
mutants = "0.0.3"
postcard = { version = "1.1.2", features = ["use-std"] }
# Has to be 0.7 for Solana SDK compatibility
rand = "0.7"
remoc = { version = "=0.15.0", default-features = false }
rustls = "=0.23.27"
schemars = "0.8.21"
serde = { version = "1.0.216", default-features = false }
serde_json = { version = "1.0.134", default-features = false }
serde_with = "3.14.0"
sqlx = "0.8.3"
thiserror = "2.0.9"
tokio = { version = "1.42.0", features = ["full"] }
tokio-util = "0.7.13"
tower = "0.4.13"
tracing = { version = "0.1.41", default-features = false }
tracing-appender = "0.2"
tracing-subscriber = "0.3.19"

# Solana & Agave
agave-geyser-plugin-interface = "=2.2.1"
solana-account = "=2.2.1"
solana-account-decoder-client-types = "=2.2.1"
solana-cli-config = "=2.2.1"
solana-client = "=2.2.1"
solana-commitment-config = "=2.2.1"
solana-compute-budget-interface = "=2.2.1"
solana-epoch-info = "=2.2.1"
solana-keypair = "=2.2.1"
solana-native-token = "=2.2.1"
solana-program = "=2.2.1"
solana-rpc-client = "=2.2.1"
solana-rpc-client-api = "=2.2.1"
solana-seed-derivable = "=2.2.1"
solana-signature = "=2.2.1"
solana-signer = "=2.2.1"
solana-test-validator = "=2.2.1"
solana-transaction = "=2.2.1"
solana-transaction-error = "=2.2.1"
solana-transaction-status = "=2.2.1"
solana-transaction-status-client-types = "=2.2.1"

anchor-lang = "=0.31.1"

yellowstone-grpc-client = "=6.0.0"
yellowstone-grpc-proto = "=6.0.0"

# SP1 dependencies
sp1-build = "5.0.8"
sp1-derive = "5.0.8"
sp1-sdk = "5.0.8"
sp1-zkvm = "5.0.8"

# Locals
data-anchor = { path = "crates/cli", version = "0.4.0" }
data-anchor-api = { path = "crates/indexer-api", version = "0.4.0" }
data-anchor-client = { path = "crates/client", version = "0.4.0" }
data-anchor-indexer = { path = "crates/indexer" }
data-anchor-proofs = { path = "crates/proofs", version = "0.4.0" }
data-anchor-blober = { path = "programs/programs/blober", version = "0.1.7", default-features = false, features = [
  "no-entrypoint",
] }
data-anchor-data-correctness-verifier = { path = "programs/programs/verifiers/data-correctness", version = "0.1.7", default-features = false, features = [
  "no-entrypoint",
] }
data-anchor-dawn-sla-verifier = { path = "programs/programs/verifiers/dawn-sla", version = "0.1.7", default-features = false, features = [
  "no-entrypoint",
] }
data-anchor-prover = { path = "crates/prover" }
data-anchor-prover-core = { path = "crates/prover/programs/core" }

[patch.crates-io]
getrandom_v0_1 = { package = "getrandom", git = "https://github.com/nitro-svm/getrandom", branch = "0.1-zkvm" }
