[workspace]
resolver = "2"
members = [
  "crates/cli",
  "crates/client",
  "crates/indexer-api",
  "crates/proofs",
  "crates/prover",
  "crates/prover-script",
  "crates/prover/programs/*",
  "crates/utils",
]
exclude = ["programs", "examples"]

[workspace.package]
edition = "2024"
version = "0.4.4"
license = "MIT"
authors = ["Nitro Labs <team@nitro.technology>"]
homepage = "https://www.termina.technology"
publish = true
repository = "https://github.com/nitro-svm/data-anchor"

[workspace.dependencies]
# External dependencies
arbitrary = { version = "1.4.2", features = ["derive"] }
arbtest = "0.3.2"
async-trait = "0.1.89"
bincode = "1.3.3"
bon = "3.7.1"
borsh = { version = "1.5.7", features = ["derive"] }
bytesize = "1.3.3"
chrono = "0.4.41"
clap = { version = "4.5.45", features = ["derive", "env"] }
csv = "1.3.1"
dotenvy = "0.15.7"
flate2 = "1.1.2"
futures = { version = "0.3.31", default-features = false }
hex = { version = "0.4.3", default-features = false }
itertools = "0.14.0"
jsonrpsee = { version = "0.24.9", features = [
  "macros",
  "server-core",
  "client-core",
] }
lz4_flex = "0.11.5"
postcard = { version = "1.1.3", features = ["use-std"] }
# Has to be 0.7 for Solana SDK compatibility
rand = "0.7"
rstest = "0.26.1"
serde = { version = "1.0.219", default-features = false }
serde_json = { version = "1.0.143", default-features = false }
serde_with = "3.14.1"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = "0.7.16"
tracing = { version = "0.1.41", default-features = false }
tracing-subscriber = "0.3.19"
ruzstd = "0.8.1"

# Solana & Agave
solana-account = "2.2.1"
solana-account-decoder-client-types = "2.3.8"
solana-cli-config = "2.2.1"
solana-client = "2.3.7"
solana-commitment-config = "2.2.1"
solana-compute-budget-interface = "2.2.2"
solana-epoch-info = "2.2.1"
solana-keypair = "2.2.1"
solana-native-token = "2.2.2"
solana-pubkey = "2.2.1"
solana-rpc-client = "2.3.7"
solana-rpc-client-api = "2.3.7"
solana-seed-derivable = "2.2.1"
solana-signature = "2.3.0"
solana-signer = "2.2.1"
solana-transaction = "2.2.2"
solana-transaction-status = "2.3.7"

anchor-lang = "=0.31.1"

# SP1 dependencies
sp1-build = "5.2.1"
sp1-derive = "5.2.1"
sp1-sdk = "5.2.1"
sp1-zkvm = "5.2.1"

# Nitro dependencies
nitro-sender = "0.2.0"

# Locals
data-anchor = { path = "crates/cli", version = "0.4.4" }
data-anchor-api = { path = "crates/indexer-api", version = "0.4.4" }
data-anchor-client = { path = "crates/client", version = "0.4.4" }
data-anchor-proofs = { path = "crates/proofs", version = "0.4.4" }
data-anchor-blober = { path = "programs/programs/blober", version = "0.2.2", default-features = false, features = [
  "no-entrypoint",
] }
data-anchor-data-correctness-verifier = { path = "programs/programs/data-correctness", version = "0.2.2", default-features = false, features = [
  "no-entrypoint",
] }
data-anchor-pob-sla-verifier = { path = "programs/programs/pob-sla", version = "0.2.2", default-features = false, features = [
  "no-entrypoint",
] }
data-anchor-prover = { path = "crates/prover" }
data-anchor-prover-core = { path = "crates/prover/programs/core" }
data-anchor-utils = { path = "crates/utils", version = "0.4.4" }

[patch.crates-io]
getrandom_v0_1 = { package = "getrandom", git = "https://github.com/nitro-svm/getrandom", branch = "0.1-zkvm" }
