[package]
name = "data-anchor-examples"
description = "Examples for Data Anchor"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
publish = false

[dev-dependencies]
# External dependencies from crates.io
clap = { workspace = true }
dotenvy = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }

# Solana & Agave
solana-cli-config = { workspace = true }
solana-keypair = { workspace = true }
solana-pubkey = { workspace = true }
solana-signer = { workspace = true }

# Locals
data-anchor-client = { workspace = true }
