[workspace]
members = ["programs/blober", "programs/verifiers/*"]
resolver = "2"

[workspace.package]
version = "0.1.7"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Nitro Labs <team@nitro.technology>"]
homepage = "https://www.termina.technology"
publish = true
repository = "https://github.com/nitro-svm/data-anchor"

[workspace.dependencies]
# External dependencies from crates.io
bincode = "1.3.3"
futures = "0.3.31"
hex = "0.4.3"
rand = "0.8.5"
tokio = "1.43.0"

# Solana & Agave
solana-logger = "=2.1.6"
solana-program-test = "=2.1.6"
solana-sdk = "=2.1.6"
solana-rpc-client = "=2.1.6"
solana-test-validator = "=2.1.6"

anchor-lang = "=0.31.1"

# SP1
sp1-solana = { git = "https://github.com/succinctlabs/sp1-solana" }

# Locals
data-anchor-blober = { path = "./programs/blober", version = "0.1.7", default-features = false }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
