[package]
name = "nitro-da-cli"
description = "Contains CLI utilities for interacting with the Blober program on Solana."
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
publish = { workspace = true }

[dependencies]
# External dependencies
clap = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

# Solana & Agave
solana-cli-config = { workspace = true }
solana-sdk = { workspace = true }

# Locals
blober = { workspace = true }
nitro-da-client = { workspace = true }
