[package]
name = "data-anchor"
description = "Contains CLI utilities for interacting with the Blober program on Solana."
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
publish = { workspace = true }

[dependencies]
# External dependencies
bytesize = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
csv = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
itertools = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

# Solana & Agave
anchor-lang = { workspace = true }
solana-cli-config = { workspace = true }
solana-keypair = { workspace = true }
solana-signature = { workspace = true }
solana-signer = { workspace = true }

# Locals
data-anchor-blober = { workspace = true }
data-anchor-client = { workspace = true }
data-anchor-api = { workspace = true }
data-anchor-utils = { workspace = true, features = ["compression"] }
