[package]
name = "data-anchor-client"
description = "Contains blober client for interacting with the Blober program on Solana."
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
publish = { workspace = true }

[dependencies]
# External dependencies
async-trait = { workspace = true }
bon = { workspace = true, features = ["experimental-getter"] }
clap = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
jsonrpsee = { workspace = true, features = ["ws-client", "http-client"] }
schemars = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Solana & Agave
anchor-lang = { workspace = true }
solana-account-decoder-client-types = { workspace = true }
solana-cli-config = { workspace = true }
solana-client = { workspace = true }
solana-clock = { workspace = true }
solana-keypair = { workspace = true }
solana-pubkey = { workspace = true }
solana-rpc-client = { workspace = true }
solana-rpc-client-api = { workspace = true }
solana-sdk = { workspace = true }
solana-signer = { workspace = true }
solana-transaction = { workspace = true }
solana-transaction-error = { workspace = true }
solana-transaction-status = { workspace = true }

# Locals
data-anchor-blober = { workspace = true }
data-anchor-api = { workspace = true }

[dev-dependencies]
# External dependencies
arbitrary = { workspace = true, features = ["derive"] }
arbtest = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros"] }

# Solana & Agave
solana-test-validator = { workspace = true }
