[package]
name = "data-anchor-api"
description = "The shared API for the Data Anchor indexer."
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
publish = { workspace = true }

[dependencies]
# External dependencies from crates.io
clap = { workspace = true, features = ["derive"] }
chrono = { workspace = true, features = ["serde"] }
itertools = { workspace = true }
jsonrpsee = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["alloc", "derive"] }
serde_with = { workspace = true }

# Solana & Agave
anchor-lang = { workspace = true }
solana-transaction = { workspace = true }
solana-transaction-status = { workspace = true }

# Locals
data-anchor-blober = { workspace = true }
data-anchor-data-correctness-verifier = { workspace = true }
data-anchor-dawn-sla-verifier = { workspace = true }
data-anchor-proofs = { workspace = true }
