[package]
name = "nitro-da-proofs"
description = "Proofs regarding the presence or absence of a blob uploaded using the Blober program."
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
publish = { workspace = true }

[dependencies]
# External dependencies from crates.io
bincode = { workspace = true }
blake3 = { workspace = true }
hex = { workspace = true }
itertools = { workspace = true }
serde = { workspace = true, features = ["alloc", "derive"] }
thiserror = { workspace = true }
tracing = { workspace = true, features = ["attributes"] }

# Solana & Agave
anchor-lang = { workspace = true }
solana-sdk = { workspace = true }

# Locals
blober = { workspace = true }

[dev-dependencies]
# External dependencies from crates.io
risc0-zkvm = { workspace = true }
arbitrary = { workspace = true, features = ["derive"] }
arbtest = { workspace = true }
mutants = { workspace = true }
serde_json = { workspace = true }

# Solana & Agave
solana-accounts-db = { workspace = true }
