[package]
name = "data-anchor-proofs"
description = "Proofs regarding the presence or absence of a blob uploaded using the Blober program."
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
# External dependencies from crates.io
bincode = { workspace = true }
hex = { workspace = true }
itertools = { workspace = true }
serde = { workspace = true, features = ["alloc", "derive"] }
thiserror = { workspace = true }
tracing = { workspace = true, features = ["attributes"] }

# Solana & Agave
anchor-lang = { workspace = true }

# Locals
data-anchor-blober = { workspace = true }

[dev-dependencies]
# External dependencies from crates.io
arbitrary = { workspace = true, features = ["derive"] }
arbtest = { workspace = true }
serde_json = { workspace = true }

# Solana & Agave
solana-account = { workspace = true }
solana-keypair = { workspace = true }
solana-seed-derivable = { workspace = true }
solana-signer = { workspace = true }
