[package]
name = "data-anchor-prover"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
publish = false

[dependencies]
# External dependencies
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
sp1-sdk = { workspace = true }

# Locals
data-anchor-api = { workspace = true }
data-anchor-proofs = { workspace = true }

[build-dependencies]
sp1-build = { workspace = true }
