[package]
name = "data-anchor-prover"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
# External dependencies
jsonrpsee = { workspace = true, optional = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
sp1-sdk = { workspace = true }

# Locals
data-anchor-api = { workspace = true }
data-anchor-proofs = { workspace = true }

[dev-dependencies]
# Locals
data-anchor-prover = { workspace = true, features = ["jsonrpsee"] }

[build-dependencies]
sp1-build = { workspace = true }

[features]
jsonrpsee = [ "dep:jsonrpsee" ]
