[package]
name = "data-anchor-prover"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
publish = false

[package.metadata.cargo-udeps.ignore]
development = ["data-anchor-prover"]

[dependencies]
# External dependencies
jsonrpsee = { workspace = true, optional = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
sp1-sdk = { workspace = true }

# Locals
data-anchor-api = { workspace = true }
data-anchor-proofs = { workspace = true }

[dev-dependencies]
# Locals
data-anchor-prover = { workspace = true, features = ["jsonrpsee"] }

[build-dependencies]
sp1-build = { workspace = true }

[features]
jsonrpsee = [ "dep:jsonrpsee" ]
