[package]
name = "data-anchor-utils"
description = "Data Anchor utilities library"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
publish.workspace = true
repository.workspace = true

[dependencies]
# External dependencies from crates.io
thiserror = { workspace = true }
serde = { workspace = true, features = ["alloc", "derive"] }

# Encoding
bincode = { workspace = true }
borsh = { workspace = true, optional = true }
postcard = { workspace = true }
serde_json = { workspace = true, features = ["std"] }

# Compression
async-trait = { workspace = true, optional = true }
lz4_flex = { workspace = true, optional = true }
flate2 = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
ruzstd = { workspace = true, optional = true }

[dev-dependencies]
# External dependencies
rstest = { workspace = true }

# Locals
data-anchor-utils = { path = ".", features = ["borsh", "compression", "async"] }

[features]
default = []
async = [ "dep:async-trait", "dep:tokio" ]
borsh = [ "dep:borsh" ]
compression = [ "dep:flate2", "dep:lz4_flex", "dep:ruzstd" ]
