[package]
name = "data-anchor-proof-program"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
publish = false

[dependencies]
# External dependencies
sp1-zkvm = { workspace = true }

# Locals
data-anchor-proofs = { workspace = true }
