[package]
name = "data-anchor-blober"
description = "The Data Anchor Blober program used to store hashes of blob data."
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
publish = { workspace = true }

[lib]
crate-type = ["cdylib", "lib"]
name = "data_anchor_blober"

[features]
default = [ "sp1" ]
cpi = [ "no-entrypoint" ]
sp1 = [ "dep:sp1-solana" ]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = [ "anchor-lang/idl-build" ]

[dependencies]
# External dependencies from crates.io
bincode = { workspace = true }
hex = { workspace = true }

anchor-lang = { workspace = true, features = ["init-if-needed"] }

# SP1
sp1-solana = { workspace = true, optional = true }

[dev-dependencies]
# External dependencies from crates.io# Solana & Agave
futures = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true }

# Solana & Agave
solana-logger = { workspace = true }
solana-program-test = { workspace = true }
solana-rpc-client = { workspace = true }
solana-sdk = { workspace = true }
solana-test-validator = { workspace = true }
